# time-loguru

./: README.md  pyproject.toml
src/time_consumption_tracker/: __init__.py  tracker.py
src/time_loguru/: __init__.py  tracker.py
