[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time_loguru"
version = "0.1.0"
description = "Global time consumption tracker with context manager API."
requires-python = ">=3.8"
authors = [{ name = "Hyeonjae Gil" }]

dependencies = ["loguru>=0.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
